[tool.poetry]
name = "get-yt-videos-backend"
version = "0.1.0"
description = ""
authors = ["Han Vo"]
readme = "README.md"
packages = [{include = "get-yt-videos-backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
fastapi-scheduler = "^0.0.12"
envs = "^1.4"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
python-dotenv = "^1.0.0"
poetry-plugin-dotenv = "^0.4.1"
aiosqlite = "^0.19.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
